# auth

./: Cargo.toml  LICENSE
src/: handler.rs  main.rs  service.rs
src/api/: dto.rs  handler.rs  handlers.rs  mod.rs  responses.rs  router.rs  server.rs
src/api/dtos/: mod.rs  requests.rs  responses.rs
src/api/models/: mod.rs  responses.rs
src/api/models/dtos/: user.rs
src/api/models/requests/: create_user.rs  mod.rs  update_password.rs  verify_user.rs
src/api/models/responses/: create_user.rs  create_user_response.rs  mod.rs  responses.rs  server_response.rs  verify_user.rs
src/services/: mod.rs
src/services/auth/: mod.rs
src/services/auth/repo/: database.rs  mod.rs
src/user_service/: error.rs  mod.rs  models.rs  service.rs
src/user_service/repo/: models.rs  queries.rs  service.rs
